test/files/neg/abstract-vars.check
abstract-vars.scala:5: error: class Fail1 needs to be abstract. Missing implementation for:
  def x: Int
(Note that variables need to be initialized to be defined)
class Fail1 extends A {
      ^
abstract-vars.scala:9: error: class Fail2 needs to be abstract. Missing implementation for:
  def x: Int // inherited from class A
(Note that variables need to be initialized to be defined)
class Fail2 extends A { }
      ^
abstract-vars.scala:11: error: class Fail3 needs to be abstract. Missing implementation for:
  def x_=(x$1: Int): Unit // inherited from class A
(Note that an abstract var requires a setter in addition to the getter)
class Fail3 extends A {
      ^
abstract-vars.scala:14: error: class Fail4 needs to be abstract. Missing implementation for:
  def x_=(x$1: Int): Unit // inherited from class A
(Note that an abstract var requires a setter in addition to the getter)
class Fail4 extends A {
      ^
abstract-vars.scala:18: error: class Fail5 needs to be abstract. Missing implementation for:
  def x: Int // inherited from class A
(Note that an abstract var requires a getter in addition to the setter)
class Fail5 extends A {
      ^
5 errors found
